--- a/packages/afk_nostr_sdk/package.json
+++ b/packages/afk_nostr_sdk/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "@nostr-dev-kit/ndk": "^2.8.2",
     "@tanstack/react-query": "^5.40.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
