--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
+    "target": "ESNext",
     "lib": [
       "dom",
       "dom.iterable",
       "esnext"
     ],
+    "module": "ES6",
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -12,7 +14,6 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
-    "module": "esnext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
