--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -6,7 +6,7 @@
       "dom.iterable",
       "esnext"
     ],
-    "module": "ES6",
+    "module": "esnext",
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
