--- a/packages/afk_nostr_sdk/tsconfig.json
+++ b/packages/afk_nostr_sdk/tsconfig.json
@@ -23,7 +23,9 @@
     "downlevelIteration": true,
     "allowSyntheticDefaultImports": true,
     "jsx": "react-native",
-    "module": "ES6"
+    "module": "ES6",
+    "outDir": "./dist",
+    "declaration": true,
   },
   "exclude": ["node_modules", "dist", "babel.config.js", "metro.config.js", "jest.config.js"],
   "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"]
