--- a/packages/afk_nostr_sdk/package.json
+++ b/packages/afk_nostr_sdk/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "install": "pnpm install .",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "format:check": "prettier -c \"src/**/*.{ts,tsx}\"",
@@ -17,6 +16,7 @@
   "dependencies": {
     "@nostr-dev-kit/ndk": "^2.8.2",
     "@tanstack/react-query": "^5.40.0",
+    "afk_nostr_sdk": "link:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "zustand": "^4.5.2"
@@ -24,6 +24,8 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "@uniswap/eslint-config": "^1.2.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
