--- a/packages/afk_nostr_sdk/tsconfig copy.json
+++ b/packages/afk_nostr_sdk/tsconfig copy.json
@@ -13,7 +13,7 @@
     "module": "ES6",
     "moduleResolution": "node",
     "outDir": "./dist",
-    "jsx": "react",  // Add this line for React projects
+    "jsx": "react"  
   },
   "exclude": ["node_modules", "dist", "babel.config.js", "metro.config.js", "jest.config.js"],
   "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "next-env.d.ts",]
