--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -26,6 +26,7 @@
     "@tanstack/react-query": "^5.40.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "zustand": "^4.5.2",
     "afk_nostr_sdk":"workspace:*",
     "@nostr-dev-kit/ndk": "^2.8.2"
   },
