--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -2,14 +2,18 @@
   "name": "website",
   "version": "0.1.0",
   "private": true,
+  
   "scripts": {
     "dev": "next dev",
     "start": "next start",
+    "build:app": "pnpm run build:nostr_sdk && next build",
     "build": "next build",
+    "build:nostr_sdk": "cd ../.. && pnpm run build:nostr_sdk",
     "lint": "next lint",
     "lint:fix":"next lint --fix",
     "prettier:fix":"pnpm prettier --write 'src/**/*.tsx'",
-    "prettier:fix:ts":"pnpm prettier --write 'src/**/*.ts'"
+    "prettier:fix:ts":"pnpm prettier --write 'src/**/*.ts'",
+    "check-types": "tsc --noEmit"
   },
   "dependencies": {
     "@avnu/avnu-sdk": "^2.0.0",
@@ -21,9 +25,12 @@
     "qs": "^6.12.3",
     "starknet": "6.9.0",
     "zod": "^3.23.8",
-    "afk_nostr_sdk":"workspace:*",
-    "@nostr-dev-kit/ndk": "^2.8.2"
-
+    "@tanstack/react-query": "^5.40.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "zustand": "^4.5.2",
+    "@nostr-dev-kit/ndk": "^2.8.2",
+    "afk_nostr_sdk":"workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20",
