--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -6,7 +6,7 @@
       "dom.iterable",
       "esnext"
     ],
-    "module": "ES6",
+    "module": "esnext",
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -27,7 +27,8 @@
     "paths": {
       "@/*": [
         "./src/*"
-      ]
+      ],
+      "afk_nostr_sdk": ["../../packages/afk_nostr_sdk/src"]
     },
     "noEmit": true
   },
