--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -24,9 +24,9 @@
     "allowSyntheticDefaultImports": true,
     "jsx": "react-native",
     "module": "ES6",
-    // "paths": {
-    //   "afk_nostr_sdk": ["../../packages/afk_nostr_sdk/src"]
-    // },
+    "paths": {
+      "afk_nostr_sdk": ["../../packages/afk_nostr_sdk/src"]
+    },
   },
   "exclude": ["node_modules", "dist", "babel.config.js", "metro.config.js", "jest.config.js"],
   "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"]
