--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -23,7 +23,10 @@
     "downlevelIteration": true,
     "allowSyntheticDefaultImports": true,
     "jsx": "react-native",
-    "module": "ES6"
+    "module": "ES6",
+    "paths": {
+      "afk_nostr_sdk": ["../../packages/afk_nostr_sdk/src"]
+    },
   },
   "exclude": ["node_modules", "dist", "babel.config.js", "metro.config.js", "jest.config.js"],
   "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"]
