fix key test + ui

--- a/onchain/Scarb.toml
+++ b/onchain/Scarb.toml
@@ -24,3 +24,4 @@ sort-module-level-items = true
 [[target.starknet-contract]]
 casm = true
 sierra = true
+allowed-libfuncs-list.name = "experimental"
