Feat/keys mvp (#16)
* init view keys marketplace + key card

* ui + fix + scripts deploy

* css card

* fix key test + ui

* fix package + ui

* clean

* scarb fmt

* add img + ui + clean + deploy contract with issue owner address

* add new contract + upgrade scarb + fix owner

--- a/onchain/Scarb.toml
+++ b/onchain/Scarb.toml
@@ -6,9 +6,8 @@ edition = "2023_11"
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 
 [dependencies]
-starknet = "2.6.3"
-openzeppelin = { git = "https://github.com/openzeppelin/cairo-contracts", tag="v0.14.0" }
-pragma_lib = { git = "https://github.com/astraly-labs/pragma-lib" }
+starknet = ">=2.6.3"
+openzeppelin = { git = "https://github.com/openzeppelin/cairo-contracts", tag="v0.13.0" }
 
 [dev-dependencies]
 snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.25.0" }
@@ -24,3 +23,4 @@ sort-module-level-items = true
 [[target.starknet-contract]]
 casm = true
 sierra = true
+allowed-libfuncs-list.name = "experimental"
