--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -29,6 +29,7 @@
     "@react-native-community/netinfo": "11.3.1",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
@@ -39,6 +40,7 @@
     "@tanstack/react-query": "^5.40.0",
     "@uniswap/sdk-core": "^5.3.1",
     "@walletconnect/react-native-compat": "^2.13.3",
+    "afk_nostr_sdk": "workspace:*",
     "axios": "^1.7.2",
     "buffer": "^6.0.3",
     "crypto-es": "^2.1.0",
@@ -77,11 +79,10 @@
     "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.6",
+    "react-native-webview": "^13.10.5",
     "starknet": "6.9.0",
     "starknetkit": "^1.1.9",
-    "zustand": "^4.5.2",
-    "afk_nostr_sdk":"workspace:*"
-
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
