--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "ts-node src/index.ts",
+    "start:dev": "ts-node-dev src/index.ts",
     "start:prod": "ts-node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
