--- a/apps/data-backend/tsconfig.json
+++ b/apps/data-backend/tsconfig.json
@@ -15,7 +15,7 @@
     "skipLibCheck": true
   },
   "exclude": ["node_modules", "dist"],
-  "include": ["src/**/*", "src/**/*.ts", "/src/**/*.ts", "**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"],
+  "include": [ "src/**/*.graphql", "src/**/*", "src/**/*.ts", "/src/**/*.ts", "**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"],
   "paths": {
     "indexer-prisma": ["packages/indexer-prisma/src"]
   },
