--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.13.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.9.0",
