--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -15,19 +15,24 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.13.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.9.0",
+    "helmet": "^7.1.0",
     "indexer-prisma": "workspace:*",
     "pg": "^8.12.0",
-    "pg-promise": "^11.9.1"
+    "pg-promise": "^11.9.1",
+    "common":"workspace:*"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "tsx": "^4.7.3"
+
   }
 }
