--- a/apps/mobile/.env.example
+++ b/apps/mobile/.env.example
@@ -5,3 +5,4 @@ EXPO_PUBLIC_BACKEND_URL="http://localhost:3000/api"
 
 EXPO_PUBLIC_WC_ID="your_wallet_connect_project_id"
 EXPO_NODE_ENV="development"
+EXPO_PUBLIC_INDEXER_BACKEND_URL=""
