--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -30,7 +30,8 @@
     "react-dom": "^18.3.1",
     "zustand": "^4.5.2",
     "@nostr-dev-kit/ndk": "^2.8.2",
-    "afk_nostr_sdk":"workspace:*"
+    "afk_nostr_sdk":"workspace:*",
+    "common":"workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20",
