--- a/onchain/.gitignore
+++ b/onchain/.gitignore
@@ -1,2 +1,29 @@
-target
+# Compiler files
+cache/
+out/
 
+# Ignores development broadcast logs
+!/broadcast
+/broadcast/*/31337/
+/broadcast/**/dry-run/
+
+# Docs
+docs/
+
+# Dotenv file
+.env
+
+node_modules
+# Hardhat files
+/cache
+/cache_hardhat
+/artifacts
+ignition/deployments
+
+# TypeChain files
+/typechain
+/typechain-types
+
+# solidity-coverage files
+/coverage
+/coverage.json
