--- a/onchain/.gitmodules
+++ b/onchain/.gitmodules
@@ -1,5 +1,5 @@
-[submodule "solidity/lib/kakarot-rpc"]
-	path = solidity/lib/kakarot-rpc
+[submodule "onchain/lib/kakarot-rpc"]
+	path = onchain/lib/kakarot-rpc
 	url = https://github.com/kkrt-labs/kakarot-rpc
 [submodule "solidity_contracts/lib/forge-std"]
 	path = solidity_contracts/lib/forge-std
