--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -7,7 +7,7 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/icon.png",
       "backgroundColor": "#ffffff"
     },
     "assetBundlePatterns": ["**/*"],
