--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.13.0",
+    "common": "workspace:*",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -25,15 +26,14 @@
     "indexer-prisma": "workspace:*",
     "pg": "^8.12.0",
     "pg-promise": "^11.9.1",
-    "common":"workspace:*"
+    "telegraf": "^4.16.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.4",
-    "tsx": "^4.7.3"
-
+    "tsx": "^4.7.3",
+    "typescript": "^5.5.4"
   }
 }
