--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dev:mobile":"cd apps/mobile && pnpm run start",
     "build:nostr_sdk":"cd packages/afk_nostr_sdk && pnpm run build",
     "build:indexer-prisma":"cd packages/indexer-prisma && pnpm pull && pnpm generate",
+    "build:backend":"cd apps/data-backend && pnpm run build",
+    "build:backend:all":"pnpm run build:indexer-prisma && cd apps/data-backend && pnpm run build",
     "dev": "turbo run dev",
     "web":"turbo run dev --filter=website",
     "mobile":"turbo run start --filter=mobile",
