try lock to deploy backend

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build:indexer-prisma":"cd packages/indexer-prisma && pnpm pull && pnpm generate",
     "build:backend":"cd apps/data-backend && pnpm run build",
     "build:backend:all":"pnpm run build:indexer-prisma && cd apps/data-backend && pnpm run build",
+    "run:backend":"cd apps/data-backend && pnpm run start:prod",
     "dev": "turbo run dev",
     "web":"turbo run dev --filter=website",
     "mobile":"turbo run start --filter=mobile",
