--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -19,6 +19,7 @@
     "apollo-server": "^3.13.0",
     "common": "workspace:*",
     "cors": "^2.8.5",
+    "data-backend": "link:",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-graphql": "^0.12.0",
