--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "build": "tsc",
     "build:index": "tsc",
-    "build:all": "pnpm run build:indexer-prisma && tsc",
+    "build:all": "pnpm run build:indexer-prisma && cd ../../apps/data-backend tsc",
     "start": "ts-node src/index.ts",
     "start:dev": "ts-node-dev src/index.ts",
     "start:prod": "ts-node dist/index.js",
+    "start:node": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
