--- a/apps/data-backend/tsconfig.json
+++ b/apps/data-backend/tsconfig.json
@@ -17,6 +17,7 @@
   "exclude": ["node_modules", "dist"],
   "include": [ "src/**/*.graphql", "src/**/*", "src/**/*.ts", "/src/**/*.ts", "**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"],
   "paths": {
-    "indexer-prisma": ["packages/indexer-prisma/src"]
+    "indexer-prisma": ["packages/indexer-prisma/src"],
+    "common": ["packages/common/src"]
   },
 }
