--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "prettier": "^2.8.8",
     "turbo": "^1.13.2",
     "@babel/core": "^7.20.0",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "tsup": "^8.0.2"
+    
   },
   "engines": {
     "node": ">=14.0.0"
