--- a/apps/data-backend/tsconfig.json
+++ b/apps/data-backend/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "lib": ["dom", "esnext"],
-    "allowJs": true,
     "module": "CommonJS",
+    "lib": ["dom", "esnext"],
+    "moduleResolution": "Node",
+    "allowJs": true,
     "useUnknownInCatchVariables": false,
-    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "allowSyntheticDefaultImports": true,
