--- a/packages/indexer-prisma/package.json
+++ b/packages/indexer-prisma/package.json
@@ -2,10 +2,10 @@
   "name": "indexer-prisma",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
-  "types": "src/index.ts",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx prisma generate && npx prisma db pull && tsc",
     "generate":"npx prisma generate",
     "pull":"npx prisma db pull"
   },
@@ -16,6 +16,9 @@
     "@prisma/client": "^5.18.0"
   },
   "devDependencies": {
-    "prisma": "^5.18.0"
+    "prisma": "^5.18.0",
+    "starknet": "^6.6.6",
+    "tsup": "^8.0.2",
+    "typescript": "~5.3.3"
   }
 }
