--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
     "turbo": "^1.13.2",
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "tsup": "^8.0.2"
-    
+    "tsup": "^8.0.2",
+    "prisma":"5.18.0",
+    "@prisma/client": "^5.18.0"
   },
   "engines": {
     "node": ">=14.0.0"
