--- a/package.json
+++ b/package.json
@@ -44,6 +44,11 @@
     "prisma":"5.18.0",
     "@prisma/client": "^5.18.0"
   },
+  "devDependencies": {
+    "prisma": "^5.18.0",
+    "tsup": "^8.0.2",
+    "typescript": "~5.3.3"
+  },
   "engines": {
     "node": ">=14.0.0"
   },
