--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "./src/index.ts",
-  
   "scripts": {
     "build": "tsc",
     "build:index": "tsc",
@@ -32,10 +31,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20",
+    "@types/node": "^20.16.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.7.3",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "tsup": "^8.0.2"
   }
 }
