--- a/apps/data-backend/tsconfig.json
+++ b/apps/data-backend/tsconfig.json
@@ -11,7 +11,8 @@
     "outDir": "dist",
     "rootDir": "./src",
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
   "exclude": ["node_modules", "dist"],
   "include": [ "src/**/*.graphql", "src/**/*", "src/**/*.ts", "/src/**/*.ts", "**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"],
