--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "build:index": "tsc",
     "build:all": "pnpm run build:indexer-prisma && cd ../../apps/data-backend tsc",
-    "start": "ts-node src/index.ts",
+    "start": "ts-node src/index.js",
     "start:dev": "ts-node-dev src/index.ts",
     "start:prod": "ts-node dist/index.js",
     "start:node": "node dist/index.js",
@@ -27,7 +27,8 @@
     "indexer-prisma": "workspace:*",
     "pg": "^8.12.0",
     "pg-promise": "^11.9.1",
-    "telegraf": "^4.16.3"
+    "telegraf": "^4.16.3",
+    "typescript": "^5.5.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
