start simple test + tsconfig backend  error TS2580

--- a/apps/data-backend/tsconfig.json
+++ b/apps/data-backend/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compilerOptions": {
     "target": "ESNext",
+    "types": [ "node" ],
+    "typeRoots": [ "../node_modules/@types" ],
     "lib": [
       "dom",
-      "esnext"
+      "esnext",
     ],
     "moduleResolution": "Node",
     "allowJs": true,
