afk id & factory init

--- a/apps/data-backend/tsconfig.json
+++ b/apps/data-backend/tsconfig.json
@@ -5,6 +5,7 @@
       "dom",
       "esnext",
     ],
+    "module": "CommonJS",
     "moduleResolution": "Node",
     "allowJs": true,
     "useUnknownInCatchVariables": false,
