change package tsconfig sdk

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "build:indexer-prisma":"cd packages/indexer-prisma && pnpm pull && pnpm generate",
     "build:backend":"cd apps/data-backend && pnpm run build",
     "build:backend:all":"pnpm run build:indexer-prisma && cd apps/data-backend && pnpm run build",
-    "run:backend":"cd apps/data-backend && pnpm run start:prod",
+    "run:backend":"cd apps/data-backend && pnpm run start",
+    "run:backend:prod":"cd apps/data-backend && pnpm run start:prod",
     "dev": "turbo run dev",
     "web":"turbo run dev --filter=website",
     "mobile":"turbo run start --filter=mobile",
@@ -28,6 +29,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "db:migrate:deploy": "turbo run db:migrate:deploy",
     "db:migrate:dev": "prisma migrate dev",
+    "db:pull": "turbo run db:pull",
     "db:push": "turbo run db:push",
     "db:seed": "turbo run db:seed",
     "generate": "turbo run generate",
