--- a/packages/afk_nostr_sdk/tsconfig copy.json
+++ b/packages/afk_nostr_sdk/tsconfig copy.json
@@ -4,7 +4,7 @@
     "rootDir": "./src",
     "composite": true,
     "target": "ES6",
-    "module": "ES6",
+    "module": "ESNext",
     "lib": ["dom", "dom.iterable", "esnext"],
     "jsx": "react-jsx",
     "moduleResolution": "node",
@@ -15,8 +15,8 @@
     "allowSyntheticDefaultImports": true,
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true,
-    "declaration": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "declaration": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"],
