cairo template fix + readme + init db fun

--- a/apps/data-backend/.env.example
+++ b/apps/data-backend/.env.example
@@ -4,3 +4,5 @@ INDEXER_DATABASE_URL="postgresql://postgres"
 TELEGRAM_BOT_TOKEN=TG_BOT_FATHER
 TG_ADMIN_CHAT_ID=
 WEBHOOK_DOMAIN=https://data-backend.xyz
+
+BACKEND_DATABASE_URL=
