--- a/packages/afk_nostr_sdk/tsconfig.json
+++ b/packages/afk_nostr_sdk/tsconfig.json
@@ -15,6 +15,7 @@
     "allowSyntheticDefaultImports": true,
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true,
+    "declaration": true,
     "sourceMap": true
   },
   "include": ["src/**/*"],
