--- a/apps/data-backend/package.json
+++ b/apps/data-backend/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "build:index": "tsc",
     "build:all": "pnpm run build:indexer-prisma && cd ../../apps/data-backend tsc",
-    "start": "ts-node src/index.js",
+    "start": "ts-node src/index.ts",
     "start:dev": "ts-node-dev src/index.ts",
     "start:prod": "ts-node dist/index.js",
     "start:node": "node dist/index.js",
