--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -18,6 +18,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "addegbenga",
+      "name": "Adeyemi Gbenga",
+      "avatar_url": "https://avatars.githubusercontent.com/u/47580934?v=4",
+      "profile": "https://github.com/addegbenga",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
