--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -45,6 +45,42 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "fishonamos",
+      "name": "Fishon Amos",
+      "avatar_url": "https://avatars.githubusercontent.com/u/43862685?v=4",
+      "profile": "https://fishonsnote.medium.com/",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "lindsaymoralesb",
+      "name": "Lindsay Morales",
+      "avatar_url": "https://avatars.githubusercontent.com/u/87027508?v=4",
+      "profile": "https://github.com/lindsaymoralesb",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "Benjtalkshow",
+      "name": "Nnaji Benjamin",
+      "avatar_url": "https://avatars.githubusercontent.com/u/60315147?v=4",
+      "profile": "https://nnaji-benjamin-portfolio.vercel.app/",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "bhavyagosai",
+      "name": "Bhavya Gosai",
+      "avatar_url": "https://avatars.githubusercontent.com/u/64588227?v=4",
+      "profile": "https://github.com/bhavyagosai",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
