--- a/packages/afk_utils/package.json
+++ b/packages/afk_utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "afk_nostr_sdk",
+  "name": "afk_utils",
   "version": "0.0.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -15,11 +15,12 @@
     "check:all-strict": "yarn check && yarn format:check && yarn lint:strict && yarn ts:check"
   },
   "dependencies": {
-    "@nostr-dev-kit/ndk": "^2.8.2",
-    "@tanstack/react-query": "^5.40.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "zustand": "^4.5.2"
+    "@noble/ciphers": "0.4.1",
+    "@noble/curves": "1.3.0",
+    "@noble/hashes": "1.3.3",
+    "@scure/base": "1.1.5",
+    "expo-crypto": "~13.0.2",
+    "secp256k1": "link:@noble/curves/secp256k1"
   },
   "peerDependencies": {
     "@nostr-dev-kit/ndk": "^2.8.2",
@@ -38,13 +39,10 @@
     }
   },
   "devDependencies": {
-    "@nostr-dev-kit/ndk": "^2.8.2",
-    "@tanstack/react-query": "^5.40.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "zustand": "^4.5.2",
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@nostr-dev-kit/ndk": "^2.8.2",
+    "@tanstack/react-query": "^5.40.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@types/react-query": "^1.2.9",
@@ -58,9 +56,11 @@
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tsup": "^8.0.2",
     "typescript": "~5.3.3",
-    "afk_utils":"workspace:*"
+    "zustand": "^4.5.2"
   },
   "private": true
 }
