--- a/packages/afk_utils/package.json
+++ b/packages/afk_utils/package.json
@@ -22,13 +22,6 @@
     "expo-crypto": "~13.0.2",
     "secp256k1": "link:@noble/curves/secp256k1"
   },
-  "peerDependencies": {
-    "@nostr-dev-kit/ndk": "^2.8.2",
-    "@tanstack/react-query": "^5.40.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "zustand": "^4.5.2"
-  },
   "module": "dist/index.mjs",
   "exports": {
     ".": {
@@ -40,9 +33,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@nostr-dev-kit/ndk": "^2.8.2",
-    "@tanstack/react-query": "^5.40.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@types/react-query": "^1.2.9",
@@ -56,11 +46,8 @@
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.2.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "tsup": "^8.0.2",
-    "typescript": "~5.3.3",
-    "zustand": "^4.5.2"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
