--- a/packages/afk_utils/tsconfig.json
+++ b/packages/afk_utils/tsconfig.json
@@ -18,7 +18,7 @@
     "declaration": true,
     "sourceMap": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "/**/*"],
   "exclude": ["node_modules", "dist"],
 
 }
