--- a/packages/afk_nostr_sdk/package.json
+++ b/packages/afk_nostr_sdk/package.json
@@ -59,7 +59,8 @@
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.2.5",
     "tsup": "^8.0.2",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "afk_utils":"workspace:*"
   },
   "private": true
 }
