setup +fix hook media query + webview fix

--- a/packages/pixel_ui/public/manifest.json
+++ b/packages/pixel_ui/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "art/peace",
-  "name": "art/peace",
+  "short_name": "AFK Pixel Peace",
+  "name": "AFK Pixel Peace - Competitive artwork in Starknet",
   "icons": [
     {
       "src": "favicon.ico",
