no import package nostr => go fix

--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -28,8 +28,7 @@
       "@/*": [
         "./src/*"
       ],
-      "afk_nostr_sdk": ["../../packages/afk_nostr_sdk/src"],
-      "pixel_ui": ["../../packages/pixel_ui/src"],
+      "pixel_ui": ["../../packages/pixel_ui/src"]
     },
     "noEmit": true
   },
