--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -36,7 +36,13 @@
     "@starknet-react/core": "^2.8.2",
     "@starknet-wc/core": "0.0.4",
     "@starknet-wc/react": "0.0.4",
-    "get-starknet-core": "^3.3.0"
+    "get-starknet-core": "^3.3.0",
+    "react-transition-group": "^4.4.5",
+    "react-use-websocket": "^4.8.1",
+    "js-sha256": "^0.11.0",
+    "d3": "^7.9.0"
+
+
 
   },
   "devDependencies": {
