--- a/onchain/package.json
+++ b/onchain/package.json
@@ -23,6 +23,8 @@
     "typescript": ">=4.5.0"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^5.0.2",
+    "@openzeppelin/contracts-upgradeable": "^5.0.2",
     "dotenv": "^16.4.5",
     "solidity": "link:",
     "starknet": "^6.11.0"
