--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -90,6 +90,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "Dprof-in-tech",
+      "name": "Isaac Onyemaechi Ugwu",
+      "avatar_url": "https://avatars.githubusercontent.com/u/116242877?v=4",
+      "profile": "https://isaaconyemaechi.tech/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
