--- a/backend/Dockerfile.consumer
+++ b/backend/Dockerfile.consumer
@@ -12,6 +12,26 @@ COPY /go.mod /go.sum ./
 RUN go mod download
 COPY ./ .
 
+# Argument for Redis host and port
+ARG REDIS_HOST
+ARG REDIS_PORT
+
+# Set Redis host and port environment variables
+ENV REDIS_HOST=${REDIS_HOST}
+ENV REDIS_PORT=${REDIS_PORT}
+
+# Argument for Postgres host, port, user, and database
+ARG POSTGRES_HOST
+ARG POSTGRES_PORT
+ARG POSTGRES_USER
+ARG POSTGRES_DATABASE
+
+# Set Postgres host, port, user, and database environment variables
+ENV POSTGRES_HOST=${POSTGRES_HOST}
+ENV POSTGRES_PORT=${POSTGRES_PORT}
+ENV POSTGRES_USER=${POSTGRES_USER}
+ENV POSTGRES_DATABASE=${POSTGRES_DATABASE}
+
 # Build the app & run it
 RUN go build -o consumer ./cmd/consumer/consumer.go
 
