fix: xix backend Golang

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,12 @@
 REDIS_HOST=localhost
 REDIS_PORT=6379
+
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
 POSTGRES_DATABASE=postgres
+
+BACKEND_HOST=localhost
+BACKEND_PORT=8082
+CONSUMER_PORT=8081
