refac: move production mode to env

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,3 +10,7 @@ POSTGRES_DATABASE=postgres
 BACKEND_HOST=localhost
 BACKEND_PORT=8082
 CONSUMER_PORT=8081
+
+PRODUCTION=false
+
+BACKEND_URL=https://backend-pixel.onrender.com/
