pixel app in tsx

--- a/apps/mobile/.env.example
+++ b/apps/mobile/.env.example
@@ -8,3 +8,7 @@ EXPO_NODE_ENV="development"
 EXPO_PUBLIC_INDEXER_BACKEND_URL=""
 EXPO_PUBLIC_PIXEL_URL="http://localhost:3000/pixel"
 
+REACT_APP_USERNAME_STORE_CONTRACT_ADDRESS=
+REACT_APP_CANVAS_NFT_CONTRACT_ADDRESS=
+REACT_APP_USERNAME_STORE_CONTRACT_ADDRESS=
+REACT_APP_NODE_ENV=
